syntax = "proto3";

package combo;

import "api/grpc/protobuf/data/v1/data_1.proto";
import "api/grpc/protobuf/data/v1/data_2.proto";
import "api/grpc/protobuf/data/v1/data_3.proto";

option go_package = "github.com/DoktorGhost/reflection/src/go/pkg/grpc/service_1";

service OneService {
  rpc GetOther(data.one.DataOneRequest) returns (data.one.DataOneResponse);
}

service TwoService {
  rpc GetOther(data.two.DataTwoRequest) returns (data.two.DataTwoResponse);
}

service ThreeService {
  rpc GetOther(data.three.DataThreeRequest) returns (data.three.DataThreeResponse);
}

message GetResponse {
  int64 id = 1;
};